--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
-pyrofork
+git+https://github.com/protontech-io/pyrofork.git
 tgcrypto
 aiohttp
-python-dotenv<=0.20.0
 motor
-aiofiles
-dnspython
-apscheduler
-requests
-psutil
-jinja2
-humanize
-pytz
 Flask==1.1.2
-gunicorn==20.1.0
-Jinja2==3.0.3
-werkzeug==2.0.2
-itsdangerous==2.0.1
+python-dotenv<=0.20.0
+requests
